--- a/MyCourse.csproj
+++ b/MyCourse.csproj
@@ -6,7 +6,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\" />
-    <!-- <Compile Remove="Startup.cs" /> -->
+    <Compile Remove="Models/Services/Application/CourseService.cs" />
   </ItemGroup>
 
   <ItemGroup>
