Inseriti varie procedure per il servizio di caching

--- a/appsettings.json
+++ b/appsettings.json
@@ -15,5 +15,15 @@
       "Ascending": false,
       "Allow": ["Title", "Rating", "CurrentPrice"]
     }
-  }
+  },
+  "MemoryCache": {
+
+  },
+  "ResponseCache": {
+    "Home": {
+        "Duration": 60,
+        "Location": "Client",
+        "VaryByQueryKeys": ["page"]
+    }
+}
 }
